--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.1"
   }
 }
