--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "pug": "^3.0.2"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.1"
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
