--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Sloan Gauthier",
   "license": "ISC",
   "dependencies": {
+    "@splidejs/splide": "^4.1.4",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "connect-mongo": "^5.1.0",
