--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "./bin/www",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "set NODE_ENV=development&& nodemon ./bin/www",
+    "start:prod": "set NODE_ENV=production&& nodemon ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sloan Gauthier",
