--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./bin/www",
   "scripts": {
     "start": "set NODE_ENV=development&& nodemon ./bin/www",
-    "start:prod": "NODE_ENV=production nodemon ./bin/www",
+    "start:prod": "set NODE_ENV=production&& nodemon ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sloan Gauthier",
