--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.2.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
