--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "eslint": "^9.5.0",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
     "moment": "^2.30.1",
